# ghes-governance

./: .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.ai/architecture/: DECISION_LOG.md  OPEN_ITEMS.md  QUESTIONS.md  ROADMAP.md  STATUS.md  ab-old.md  architecture-baseline-v1.md  architecture-discovery-brief.md  architecture-principles.md  domain-model.md  session-summary-2026-07-13.md
.ai/collaboration/: avatar-bootstrap.md  callaboration-avatar-generator.md  collaboration-avatar-generator.md  instructor-architect-contract.md  load-order.md
.ai/methodology/: README.md  decision-gated-implementation-lifecycle.md  glossary.md  lifecycle-model.md  principles.md
.ai/sessions/: 2026-07-14
.ai/working/: repository-continuity.md
.devcontainer/: Dockerfile  devcontainer.json
docs/adr/: 0001-policy-first-hybrid-governance-model.md  0002-engine-agnostic-to-organizational-approval.md  (+13 more)
tests/: _boundary.py  conftest.py  test_authority_conflict.py  test_authority_conflict_divergent.py  test_authority_undeterminable.py  test_bundle_validation.py  test_determinism.py  test_effective_periods.py  test_evidence_log_independence.py  test_evidence_verification_errors.py  test_execution_refusal.py  test_execution_ungoverned.py  test_governed_evaluation.py  test_operational_log_separation.py  test_read_only_guarantee.py  test_reference_happy_path.py  test_report_citations.py  test_report_regeneration.py  test_requirement_applicability.py  test_scope_combinators.py  test_tamper_detection.py  test_unknown_propagation.py  test_unknown_strategy.py
(+92 files in other folders)
