[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ghes-governance"
version = "0.0.1"
description = "Read-only governance engine for GitHub Advanced Security adoption on GitHub Enterprise Server (Vertical Slice 1 — Observe-Mode Tracer)."
requires-python = ">=3.12"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ghes-governance = "ghes_governance.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
